--- a/index.html
+++ b/index.html
@@ -6,172 +6,157 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
     <header>
-        <div id="nav-container-topline"></div>
-        <div id="navbar">
-            <div id="navbar-left">
-                <div>
-                    <a href="WebStudio">Web Studio</a>
-                </div>
-                <div id="navbar-menu">
-                    <nav>
-                        <ul>
-                            <li>Studio</li>
-                            <li>portfolio</li>
-                            <li>Contacts</li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div id="navbar-right">
-                <ul>
-                    <li><a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
-
-                    <li><a href="tel:+110001111111">+11 000 111 11 11</a></li>
-                </ul>
-            </div>
-        </div>
+        <nav class="navbar">
+        <a href="./index.html" class="logo1">Web<span class="logo2">Studio</span></a>
+             <ul class="navbar-menu">   
+                <li class="navbar-tab">
+                    <a href="/" class="nav-link">Studio</a>
+                </li>
+                <li class="navbar-tab">
+                    <a href="" class="nav-link">Portfolio</a>
+                </li>
+                <li class="navbar-tab">
+                    <a href="" class="nav-link">Contacts</a>
+                </li>  
+             </ul>
+        </nav>
+        <address class="contact">
+            <ul class="contect-menu">
+                <li class="contact-tab">
+                    <a href="mailto:info@devstudio.com" class="contact-tab-link">info@devstudio.com</a>
+                </li>
+                <li class="contact-tab">
+                    <a href="tel:+110001111111" class="contact-tab-link">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </header>
 
 
     <main>
-        <div id="hero-image">
 
-            <h1>Solutions for Your Business</h1><br>
-            <button type="button">Order Service</button>
+        <div class="hero overlay">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1><br>
+            <button type="button" class="hero-btn">Order Service</button>
         </div>
 
 
-
-
-
-
-        <div id="section1">
-            <ul>
-                <li>
-                    <h4>Strategy</h4>
+        <div class="features">
+            <ul class="features-menu">
+                <li class="features-tab">
+                    <h3 class="features-title">Strategy</h3>
+                    <p class="features-text">
                     Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    </p>
                 </li>
-                <li>
-                    <h4>Punctuality</h4>
+                <li class="features-tab">
+                    <h3 class="features-title">Punctuality</h3>
+                    <p class="features-text">
                     Bring the key message to the brand's audience for the best price within the shortest possible time.
+                    </p>
                 </li>
-                <li>
-                    <h4>Diligence</h4>
+                <li class="features-tab">
+                    <h3 class="features-title">Diligence</h3>
+                    <p class="features-text">
                     Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    </p>
                     risk.
                 </li>
-                <li>
-                    <h4>Technologies</h4>
+                <li class="features-tab">
+                    <h3 class="features-title">Technologies</h3>
+                    <p class="features-text">
                     Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                    </p>
                 </li>
             </ul>
         </div>
 
 
 
-        <div id="section2">
-            <h2>Our Team</h2>
-            <div>
-                <ul>
-                    <li>
+        <div class="team">
+            <h2 class="team-title">Our Team</h2>
+                <ul class="team-menu">
+                    <li class="team-tab">
                         <img src="./images/img1.jpg" alt="Mark Guerrero" width="264">
-                        <div>
-                            <strong>Mark Guerrero</strong>
-                        </div>
-                        <div>Product Designer</div>
+                        <h3 class="team-name">Mark Guerrero</h3>
+                        <p class="team-text">Product Designer</p>
                     </li>
                     <li>
                         <img src="./images/img2.jpg" alt="Tom Ford" width="264">
-                        <div>
-                            <strong>Tom Ford</strong>
-                        </div>
-                        <div>Developer</div>
+                       <h3 class="team-name">Tom Ford</h3>
+                        <p class="team-text">Developer</p>
                     </li>
                     <li>
                         <img src="./images/img3.jpg" alt="Camila Garcia" width="264">
-                        <div>
-                            <strong>Camila Garcia</strong>
-                        </div>
-                        <div>Marketing</div>
+                        <h3 class="team-name">Camila Garcia</h3>
+                        <p class="team-text">Marketing</p>
                     </li>
                     <li>
                         <img src="./images/img4.jpg" alt="Daniel Wilson" width="264">
-                        <div>
-                            <strong>Daniel Wilson</strong>
-                        </div>
-                        <div>UI Designer</div>
+                        <h3 class="team-name">Daniel Wilson</h3>
+                        <p class="team-text">UI Designer</p>
                     </li>
                 </ul>
-            </div>
         </div>
 
-        <div id="section3">
-            <h2>Our Portfolio</h2>
-            <ul>
-                <li>
+
+
+        <div class="portfolio">
+            <h2 class="port-title">Our Portfolio</h2>
+            <ul class="Port-menu">
+                <li class="port-tab">
                     <img src="./images/card1.jpg" alt="Banking App" width="360">
-                    <div>
-                    <strong>Banking App</strong>
-                    </div>
-                    <div>App</div>
+                    <h3 class="port-cd-title">Banking App</h3>
+                    <p class="port-cd-text">App</p>
                 </li>
-                <li>
+                <li class="port-tab">
                     <img src="./images/card2.jpg" alt="Cashless Payment" width="360">
-                    <div>
-                    <strong>Cashless Payment</strong>
-                    </div>
+                    <h3 class="port-cd-title">Cashless Payment</h3>
                     <div>Marketing</div>
                 </li>
-                <li>
+                <li class="port-tab">
                     <img src="./images/card3.jpg" alt="Meditaion App" width="360">
-                    <div>
-                    <strong>Meditaion App</strong>
-                    </div>
-                    <div>App</div>
+                    <h3 class="port-cd-title">Meditaion App</h3>
+                    <p class="port-cd-text">App</p>
                 </li>
-                <li>
+                <li class="port-tab">
                     <img src="./images/card4.jpg" alt="Taxi Service" width="360">
-                    <div>
-                    <strong>Taxi Service</strong>
-                    </div>
-                    <div>Marketing</div>
+                    <h3 class="port-cd-title">Taxi Service</h3>
+                    <p class="port-cd-text">Marketing</p>
                 </li>
-                <li>
+                <li class="port-tab">
                     <img src="./images/card5.jpg" alt="Online Courses" width="360">
-                    <div>
-                    <strong>Online Courses</strong>
-                    </div>
-                    <div>Design</div>
-                </li>
+                    <h3 class="port-cd-title">Online Courses</h3>
+                    <p class="port-cd-text">Design</p>
+                </li class="port-tab">
                 <li>
                     <img src="./images/card6.jpg" alt="Online Courses" width="360">
-                    <div>
-                    <strong>Online Courses</strong>
-                    </div>
-                    <div>Marketing</div>
+                    <h3 class="port-cd-title">Online Courses</h3>
+                    <p class="port-cd-text">Marketing</p>
                 </li>
             </ul>
-
-
-
         </div>
     </main>
 
-    <footer>
-        <div id="footer">
-            <div>
-                <a href="WebStudio">Web Studio</a>
-            </div>
-            <p>
+    <footer class="footer">
+        <a href="./index.html" class="logo1">Web<span class="logo2">Studio</span></a>
+        <p class="footer-text">
                 Increase the flow of customers and <br>
                 sales for your business with digital <br>
                 marketing & growth solutions.
-            </p>
-        </div>
+        </p>
     </footer>
 </body>
 
