--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                     <img src="./images/card5.jpg" alt="Online Courses" width="360">
                     <h3 class="port-cd-title">Online Courses</h3>
                     <p class="port-cd-text">Design</p>
-                </li class="port-tab">
-                <li>
+                </li>
+                <li class="port-tab">
                     <img src="./images/card6.jpg" alt="Online Courses" width="360">
                     <h3 class="port-cd-title">Online Courses</h3>
                     <p class="port-cd-text">Marketing</p>
