--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <nav class="navbar">
-        <a href="./index.html" class="logo1">Web<span class="logo2">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="stu">Studio</span></a>
              <ul class="navbar-menu">   
                 <li class="navbar-tab">
                     <a href="/" class="nav-link">Studio</a>
@@ -47,13 +47,14 @@
 
     <main>
 
-        <div class="hero overlay">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1><br>
-            <button type="button" class="hero-btn">Order Service</button>
-        </div>
+        <section class="hero overlay">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="hero-btn btn">Order Service</button>
+        </section>
 
 
-        <div class="features">
+        <section class="features">
+            <h2 class="visually-hidden">features</h2>
             <ul class="features-menu">
                 <li class="features-tab">
                     <h3 class="features-title">Strategy</h3>
@@ -70,7 +71,8 @@
                 <li class="features-tab">
                     <h3 class="features-title">Diligence</h3>
                     <p class="features-text">
-                    Research and confirm brands that present the strongest digital growth opportunities and minimize
+                     Research and confirm brands that present the strongest digital growth opportunities
+                and minimize risk.
                     </p>
                     risk.
                 </li>
@@ -81,11 +83,11 @@
                     </p>
                 </li>
             </ul>
-        </div>
+        </section>
 
 
 
-        <div class="team">
+        <section class="team">
             <h2 class="team-title">Our Team</h2>
                 <ul class="team-menu">
                     <li class="team-tab">
@@ -96,7 +98,7 @@
                     <li>
                         <img src="./images/img2.jpg" alt="Tom Ford" width="264">
                        <h3 class="team-name">Tom Ford</h3>
-                        <p class="team-text">Developer</p>
+                        <p class="team-text">Frontend Developer</p>
                     </li>
                     <li>
                         <img src="./images/img3.jpg" alt="Camila Garcia" width="264">
@@ -109,11 +111,11 @@
                         <p class="team-text">UI Designer</p>
                     </li>
                 </ul>
-        </div>
+        </section>
 
 
 
-        <div class="portfolio">
+        <section class="portfolio">
             <h2 class="port-title">Our Portfolio</h2>
             <ul class="Port-menu">
                 <li class="port-tab">
@@ -147,15 +149,13 @@
                     <p class="port-cd-text">Marketing</p>
                 </li>
             </ul>
-        </div>
+        </section>
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo1">Web<span class="logo2">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="stu">Studio</span></a>
         <p class="footer-text">
-                Increase the flow of customers and <br>
-                sales for your business with digital <br>
-                marketing & growth solutions.
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
 </body>
