--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
                         <h3 class="team-name">Mark Guerrero</h3>
                         <p class="team-text">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="team-tab">
                         <img src="./images/img2.jpg" alt="Tom Ford" width="264">
                        <h3 class="team-name">Tom Ford</h3>
                         <p class="team-text">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="team-tab">
                         <img src="./images/img3.jpg" alt="Camila Garcia" width="264">
                         <h3 class="team-name">Camila Garcia</h3>
                         <p class="team-text">Marketing</p>
                     </li>
-                    <li>
+                    <li class="team-tab">
                         <img src="./images/img4.jpg" alt="Daniel Wilson" width="264">
                         <h3 class="team-name">Daniel Wilson</h3>
                         <p class="team-text">UI Designer</p>
@@ -126,11 +126,11 @@
                 <li class="port-tab">
                     <img src="./images/card2.jpg" alt="Cashless Payment" width="360">
                     <h3 class="port-cd-title">Cashless Payment</h3>
-                    <div>Marketing</div>
+                    <p class="port-cd-text">Marketing</p>
                 </li>
                 <li class="port-tab">
                     <img src="./images/card3.jpg" alt="Meditaion App" width="360">
-                    <h3 class="port-cd-title">Meditaion App</h3>
+                    <h3 class="port-cd-title">Meditation App</h3>
                     <p class="port-cd-text">App</p>
                 </li>
                 <li class="port-tab">
@@ -140,7 +140,7 @@
                 </li>
                 <li class="port-tab">
                     <img src="./images/card5.jpg" alt="Online Courses" width="360">
-                    <h3 class="port-cd-title">Online Courses</h3>
+                    <h3 class="port-cd-title">Screen Illustrations</h3>
                     <p class="port-cd-text">Design</p>
                 </li>
                 <li class="port-tab">
